objects/EUR_TR_Invoice__c.object
<CustomObject>
    <description>Is using by PR Turkey TT Project</description>
    <fields>
        <fullName>EUR_TR_DocumentDate__c</fullName>
        <label>EUR_TR_DocumentDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_TR_DocumentNumber__c</fullName>
        <externalId>true</externalId>
        <label>EUR_TR_DocumentNumber</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_TR_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>EUR_TR_ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_TR_GrossAmount__c</fullName>
        <label>EUR_TR_GrossAmount</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_TR_LastN__c</fullName>
        <label>EUR_TR_LastN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EUR_TR_RelatedAccount</label>
        <referenceTo>EUR_TR_Account__c</referenceTo>
        <relationshipLabel>EUR TR Invoice</relationshipLabel>
        <relationshipName>EUR_TR_Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EUR TR Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_TR_RelatedAccount__c</columns>
        <columns>EUR_TR_DocumentDate__c</columns>
        <columns>EUR_TR_GrossAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EUR_TR_Invoice No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EUR TR Invoice</pluralLabel>
    <recordTypes>
        <fullName>EUR_TR_Invoice</fullName>
        <active>true</active>
        <label>EUR_TR_Invoice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>